--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile-sass": "node-sass src/style.scss public/style.css"
+    "compile-sass": "node-sass src/style.scss docs/style.css"
   },
   "repository": {
     "type": "git",
